--- a/_posts/2020-10-19-reamonn.md
+++ b/_posts/2020-10-19-reamonn.md
@@ -9,7 +9,7 @@ image: reamonn
 Согласно моему источнику (читай, Википедии), немецкая группа о которой сегодня
 пойдёт речь прекратила своё существование аж в 2012 году.
 Что же, это объясняет почему мне было немного сложнее
-чем обычно найти этих ребят на музыкальных сервисах. Итак, Reamonn: 
+чем обычно найти треки этих ребят на музыкальных сервисах и ютубе. Итак, Reamonn: 
 
 ### Moments Like This
 {% include track.html
