Channel index page fixes

--- a/_channel/2020-10-19-reamonn.md
+++ b/_channel/2020-10-19-reamonn.md
@@ -3,34 +3,34 @@ image: reamonn
 songs:
     -
         name: Moments Like This
-        youtube: "XCVaqQLD_Vo"
-        spotify: "track/4PcTc9an1EVBVDYhie8UTN"
-        yandex: "album/3385909/track/86702"
+        youtube: XCVaqQLD_Vo
+        spotify: track/4PcTc9an1EVBVDYhie8UTN
+        yandex: album/3385909/track/86702
     -
         name: Flowers
-        youtube: "hzpVvcmI5DQ"
-        spotify: "track/4xRdvO9yw38wvo9oEC0sPN"
-        yandex: "album/45348/track/438029"
-        apple: "album/flowers/723366944?i=723368154"
+        youtube: hzpVvcmI5DQ
+        spotify: track/4xRdvO9yw38wvo9oEC0sPN
+        yandex: album/45348/track/438029
+        apple: album/flowers/723366944?i=723368154
     -
         name: Broken Stone
-        youtube: "YRpF9SWHpts"
-        spotify: "track/5bpaBuiKU6nxJ7lI0j7Ds7"
-        yandex: "album/3385909/track/86694"
+        youtube: YRpF9SWHpts
+        spotify: track/5bpaBuiKU6nxJ7lI0j7Ds7
+        yandex: album/3385909/track/86694
     -
         name: Weep
-        comment: "Сразу предупреждаю что на Apple Music ооочень длинная версия."
-        youtube: "UIMC0xgtoiQ"
-        spotify: "track/71TtKa4yA7AV01vQUuinRC"
-        yandex: "album/86874/track/780198"
-        apple: "album/weep-medley/723366944?i=723369072"
+        comment: Сразу предупреждаю что на Apple Music ооочень длинная версия.
+        youtube: UIMC0xgtoiQ
+        spotify: track/71TtKa4yA7AV01vQUuinRC
+        yandex: album/86874/track/780198
+        apple: album/weep-medley/723366944?i=723369072
     -
         name: Tonight
-        comment: "Ну и куда уж без самой той самой песни из заголовка :)"
-        youtube: "jtoncUzV6nA"
-        spotify: "track/1VIMJ84snstO50Bf9uXcdJ"
-        yandex: "album/86874/track/780207"
-        apple: "album/tonight/1444420661?i=1444420662"
+        comment: Ну и куда уж без самой той самой песни из заголовка :)
+        youtube: jtoncUzV6nA
+        spotify: track/1VIMJ84snstO50Bf9uXcdJ
+        yandex: album/86874/track/780207
+        apple: album/tonight/1444420661?i=1444420662
 ---
 # You killed me with your smile
 
