--- a/_channel/2020-10-18-olly-murs.md
+++ b/_channel/2020-10-18-olly-murs.md
@@ -2,31 +2,32 @@
 image: olly_murs
 songs:
     -
-        name: "Accidental"
-        youtube: "cWLJamyPujs"
-        spotify: "track/1Xira1y8GUa6BoqCtCEdvb"
-        apple: "album/accidental/399737810?i=399737825"
+        name: Accidental
+        youtube: cWLJamyPujs
+        spotify: track/1Xira1y8GUa6BoqCtCEdvb
+        apple: album/accidental/399737810?i=399737825
     -
         name: I'm OK
-        youtube: "hoj7SdaCEcM"
-        spotify: "track/2ehIa7RWxJDyxh32YBmcjf"
-        yandex: "album/357635/track/4634815"
-        apple: "album/im-ok/503236352?i=503236473"
+        youtube: hoj7SdaCEcM
+        spotify: track/2ehIa7RWxJDyxh32YBmcjf
+        yandex: album/357635/track/4634815
+        apple: album/im-ok/503236352?i=503236473
     -
         name: Busy
-        youtube: "FYTQU4KvhJM"
-        spotify: "track/2NNFzMWduMDvK8KgR0708E"
-        yandex: "album/180293/track/5406960"
-        apple: "album/busy/399737810?i=399737816"
+        youtube: FYTQU4KvhJM
+        spotify: track/2NNFzMWduMDvK8KgR0708E
+        yandex: album/180293/track/5406960
+        apple: album/busy/399737810?i=399737816
     -
         name: Grow Up
-        youtube: "nuLLEhmpxJo"
-        spotify: "track/7fldJ1m6Ol6tbOIzA9y9zg"
-        yandex: "album/10829246/track/31408591"
-        apple: "album/grow-up/1159368850?i=1159368859"
+        youtube: nuLLEhmpxJo
+        spotify: track/7fldJ1m6Ol6tbOIzA9y9zg
+        yandex: album/10829246/track/31408591
+        apple: album/grow-up/1159368850?i=1159368859
 ---
 # Самый милый сталкер
 
-Вчера мы колбасились под рок от [Shinedown](/_channel/2020/10/17/shinedown/), а сегодня расслабимся под лёгкую попсу от Olly Murs,
+Вчера мы колбасились под рок от [Shinedown](/channel/2020/10/17/shinedown/), а сегодня расслабимся под лёгкую попсу от Olly Murs,
 исполнителя самой милой сталкерской песни Accidental (хотя кто-то вполне резонно может возразить что
-[The Police - Every Breath You Take](https://www.youtube.com/watch?v=OMOGaugKpzs) это всё же эталон). Итак, погнали:
+{% include safe_link.html href="https://www.youtube.com/watch?v=OMOGaugKpzs" text="The Police - Every Breath You Take" -%}
+это всё же эталон). Итак, погнали:
