--- a/_channel/2020-10-22-ddt.md
+++ b/_channel/2020-10-22-ddt.md
@@ -33,7 +33,7 @@ songs:
 ---
 # ДихлорДифенилТрихлорэтан
 
-Это на случай если вам интересно "полное название" группы ДДТ. Я тут заметил что до сих пор посты были
+Это, на случай если вам интересно, "полное название" группы ДДТ. Я тут заметил что до сих пор посты были
 посвящены только англоговорящим исполнителям, и решил что нужно время от времени выкладывать что-то другое
 (да, ВОЗМОЖНО это намёк на K-Pop ;). Тем не менее, я был бы не я если бы в первую очередь выложил НЕ
 русских исполнителей. Надеюсь, вам понравится!
