Новый пост! (ну пжлст)

--- a/_channel/2020-10-26-jango.md
+++ b/_channel/2020-10-26-jango.md
@@ -25,5 +25,5 @@ songs:
 
 Сегодня я решил начать новую рубрику, посвящённую исполнителям, у которых я знаю только одну песню. Подумал
 "ну, как раз понедельник, день тяжёлый, можно и полениться". Начал перебирать исполнителей и понял что не могу
-остановиться, так как невольно начинал слушать остальные песни каждого кандидата. В общем, моя идея для
+остановиться, так как невольно начинал их слушать остальные песни. В общем, моя идея для
 рубрики обломалась, но зато вам больше песен:
