General layout changes

--- a/_channel/2020-10-22-ddt.md
+++ b/_channel/2020-10-22-ddt.md
@@ -31,7 +31,7 @@ songs:
         yandex: album/168137/track/1695498
         apple: album/%D1%87%D1%82%D0%BE-%D1%82%D0%B0%D0%BA%D0%BE%D0%B5-%D0%BE%D1%81%D0%B5%D0%BD%D1%8C/1079519132?i=1079519990
 ---
-# ДихлорДифенилТрихлорэтан
+# ДихлорДифенил&shy;Трихлорэтан
 
 Это, на случай если вам интересно, "полное название" группы ДДТ. Я тут заметил что до сих пор посты были
 посвящены только англоговорящим исполнителям, и решил что нужно время от времени выкладывать что-то другое
