Small post edits and a new draft

--- a/_channel/2020-11-03-koloto.md
+++ b/_channel/2020-11-03-koloto.md
@@ -29,4 +29,4 @@ songs:
 # Мечтательная электроника
 
 Вот и труъ-электроника подъехала! Сегодня не будет никаких слов, только музыка. Если верить исполнительнице, все
-звуки использованные в композициях были записаны лично ей. На мой взгляд, получилось очень эмоционально и свежо:
+звуки использованные в композициях были записаны лично ей. На мой взгляд получилось очень эмоционально и свежо:
