Проба нового поста

--- a/_channel/2020/11/2020-11-13-lyube.md
+++ b/_channel/2020/11/2020-11-13-lyube.md
@@ -35,4 +35,4 @@ songs:
 ---
 # Пятнично-праздничный
 
-Я знаю что многие (и я в том числе) ждали этого поста. Дождались :)
+Я знаю что многие (и я сам в том числе :D) ждали этого поста. Дождались :)
