--- a/_channel/2020/11/2020-11-16-galantis.md
+++ b/_channel/2020/11/2020-11-16-galantis.md
@@ -26,7 +26,7 @@ songs:
         yandex: album/5987732/track/44615837
         apple: album/emoji/1440215110?i=1440215591
 ---
-# Hello there
+# Электронщики
 
-Сегодня у нас дуэт шведов, имеющих большой опыт в написании хитов (к примеру Toxic и I Love It).
-А ещё у них слегка наркоманские клипы :D
+Сегодня у нас дуэт шведов, имеющих большой опыт в написании танцевальных хитов для других исполнителей
+(Toxic и I Love It их рук дело, например). А ещё у них слегка наркоманские клипы :D
