--- a/_channel/2020/11/2020-11-20-sting.md
+++ b/_channel/2020/11/2020-11-20-sting.md
@@ -22,5 +22,5 @@ songs:
 ---
 # Пятничный
 
-С удивлением узнал что Sting продолжает выпускать песни, и это при том что в этом году
+С удивлением узнал что Sting продолжает выпускать песни, и это при том что в этом году ему
 исполнилось 69 лет. Nice.
