--- a/_channel/2020/11/2020-11-26-eiffel-65.md
+++ b/_channel/2020/11/2020-11-26-eiffel-65.md
@@ -10,4 +10,4 @@ songs:
 ---
 # День одной песни #3
 
-По-хорошему дурацкая и залипательная клип и такой же клип. Дабуди-дабудай!
+По-хорошему дурацкая и залипательная песня и такой же клип. Дабуди-дабудай!
