--- a/_channel/2020/11/2020-11-28-bobry.md
+++ b/_channel/2020/11/2020-11-28-bobry.md
@@ -23,7 +23,7 @@ songs:
         name: Шубись
         youtube: k94AFqxa1a4?start=827
 ---
-# Минутка
+# =БоБРы=
 
 Я был разочарован тем что эту группу почти невозможно найти на музыкальных сервисах
 (Яндекс, какого хрена?). Увы, ссылок на песни мало, но я всё же не мог не поделиться:
