--- a/_channel/2020/12/2020-12-05-nek.md
+++ b/_channel/2020/12/2020-12-05-nek.md
@@ -10,4 +10,4 @@ songs:
 ---
 # День одной песни #6
 
-Зацепила меня как песня, так и клип. Нечасто увидишь применение замены лиц, всё-таки.
+Зацепили меня как песня, так и клип. Всё-таки нечасто видишь столь удачное применение замены лиц.
