--- a/_channel/2020/12/2020-12-27-ten-cc.md
+++ b/_channel/2020/12/2020-12-27-ten-cc.md
@@ -1,5 +1,5 @@
 ---
-image: ten_с_с
+image: 10cc
 name: 10cc
 songs:
     -
@@ -9,6 +9,6 @@ songs:
         yandex: album/10538752/track/65218136
         apple: album/im-not-in-love/1440924535?i=1440924549
 ---
-# День одной песни #15
+# День одной песни #16
 
 Старая песня, о существовании которой я узнал благодаря каверу.
