--- a/_channel/2021/01/2021-01-27-sia.md
+++ b/_channel/2021/01/2021-01-27-sia.md
@@ -5,31 +5,31 @@ songs:
         name: Snowman
         youtube: gset79KMmt0
         spotify: track/7uoFMmxln0GPXQ0AcCBXRq
-        yandex: album/5976509/track/37817910?lang=en
+        yandex: album/5976509/track/37817910
         apple: album/snowman/1440098012?i=1440098017
     -
         name: Unstoppable
         youtube: cxjvTXo9WWM
         spotify: track/1yvMUkIOTeUNtNWlWRgANS
-        yandex: album/3194826/track/26790968?lang=en
+        yandex: album/3194826/track/26790968
         apple: album/unstoppable/1055074478?i=1055074639
     -
         name: Alive
         youtube: t2NgsJrrAyM
         spotify: track/25R5Tdr4K7ENb6umHzdCXn
-        yandex: album/3194826/track/25301310?lang=en
+        yandex: album/3194826/track/25301310
         apple: album/alive/1055074478?i=1055074632
     -
         name: Bird Set Free
         youtube: CqNp-KXiAHo
         spotify: track/6MowG7MRVgPfGlCMsXKMJ2
-        yandex: album/3194826/track/25880379?lang=en
+        yandex: album/3194826/track/25880379
         apple: album/bird-set-free/1055074478?i=1055074631
     -
         name: Cheap Thrills
         youtube: nYh-n7EOtMA
         spotify: track/27SdWb2rFzO6GWiYDBTD9j
-        yandex: album/3194826/track/26610367?lang=en
+        yandex: album/3194826/track/26610367
         apple: album/cheap-thrills/1055074478?i=1055074640
 ---
 # Sia
